fix(java): galho 3 fase adepto — aplica review (JEP 396/403, ZGC generational log format, fences)